refined for SEO

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="Ares Security LLC"
+      name="description"
       content="Ares Security is a full service security company that provides security guard services, and security guard training in the state of Colorado."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
